--- a/lamp/Dockerfile
+++ b/lamp/Dockerfile
@@ -1,16 +1,34 @@
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
-ENV DEBIAN_FRONTEND=noninteractive
+ARG DEBIAN_FRONTEND=noninteractive
 
-# Installiere Apache, PHP, MariaDB
-RUN apt update && apt install -y apache2 php libapache2-mod-php mariadb-server php-mysql && \
-    apt clean
+RUN ln -snf /usr/share/zoneinfo/Europe/Vienna /etc/localtime && echo Europe/Vienna > /etc/timezone
+RUN dpkg --configure -a
 
-# Setze MariaDB root Passwort & sichere Installation
-COPY init.sql /init.sql
-RUN service mysql start && \
-    mysql < /init.sql
+RUN apt update && apt install -y nginx php8.1-fpm mariadb-server php-mysqli acl
 
-# Aktiviere Apache bei Start
-EXPOSE 80
-CMD service mysql start && apachectl -D FOREGROUND
+RUN cat <<'EOF' > /etc/nginx/sites-available/default
+server {
+        listen 80 default_server;
+        root /var/www/html;
+        index index.php index.html index.nginx-debian.html;
+        server_name _;
+        location / {
+                try_files $uri $uri/ =404;
+        }
+        location ~ \.php$ {
+                include snippets/fastcgi-php.conf;
+                fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+        }
+        location ~ /\.ht {
+               deny all;
+        }
+}
+EOF
+
+# start.sh hinzufügen
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
+
+# Containerstart
+CMD ["/start.sh"]
