--- a/lamp/Dockerfile
+++ b/lamp/Dockerfile
@@ -5,7 +5,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN ln -snf /usr/share/zoneinfo/Europe/Vienna /etc/localtime && echo Europe/Vienna > /etc/timezone
 RUN dpkg --configure -a
 
-RUN apt update && apt install -y nginx php8.1-fpm mariadb-server php-mysqli acl
+RUN apt update && apt install -y nginx php8.1-fpm mariadb-server php-mysqli 
 
 RUN cat <<'EOF' > /etc/nginx/sites-available/default
 server {
