--- a/images/ubuntu1804php72/Dockerfile
+++ b/images/ubuntu1804php72/Dockerfile
@@ -3,7 +3,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN ln -snf /usr/share/zoneinfo/Europe/Vienna /etc/localtime && echo Europe/Vienna > /etc/timezone
 RUN dpkg --configure -a
 RUN apt update && apt install -y nginx php7.2-fpm mariadb-server php-mysqli
-RUN cat <<EOF > /etc/nginx/sites-available/default
+RUN cat <<'EOF' > /etc/nginx/sites-available/default
 server {
         listen 80 default_server;
         listen [::]:80 default_server;
