--- a/images/ubuntu2404php83/Dockerfile
+++ b/images/ubuntu2404php83/Dockerfile
@@ -23,3 +23,6 @@ server {
 }
 EOF
 RUN echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
+COPY start.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
